remove CI-breaking jvmArg